# PhotoBackup

./: .gitignore  CMakeLists.txt  CommandLineEssential.cpp  CommandLineEssential.h  CopyRecentDetails.cpp  CopyRecentDetails.h  Makefile  PhotoBackup  PhotoBackup.cpp  README.md  WORKSPACE
include/: CommandLineEssential.h  CopyRecentDetails.h  Definition.h  PhotoBackup.h
lib/: BUILD  CommandLineEssential.cpp  PhotoBackup.cpp  PhotoBackup.h  PhotoHolder.cpp  PhotoHolder.h  Shared.cpp  Shared.h
lib/definition/: BUILD  constants.h
lib/io/: BUILD  disk_info.cpp  disk_info.h  disk_info_test.cpp
lib/utils/: BUILD  utils.cpp  utils.h
scripts/: BUILD
src/: CommandLineEssential.cpp  CopyRecentDetails.cpp  PhotoBackup.cpp  PhotoHolder.cpp  Shared.cpp
test/: Test.cpp  Test_CopyRecentDetails.cpp  Test_CopyRecentDetails.h  test_suite.cpp  test_suite.h
test/dataset/DCIM/MISC/: .dropbox.device
test/dataset/ML/SETTINGS/: magic.cfg
test/dataset/ML/modules/: 5D2_212.sym  adv_int.mo  arkanoid.mo  autoexpo.mo  bench.mo  deflick.mo  dot_tune.mo  dual_iso.mo  ettr.mo  file_man.mo  lua.mo  mlv_lite.mo  mlv_play.mo  mlv_rec.mo  mlv_snd.mo  pic_view.mo  selftest.mo  silent.mo
test/dataset/ML/scripts/lib/: ._config.lua
tools/: bazel.rc
